# ibi

./: .gitignore  CMakeLists.txt  TODO
CMake/: IBIConfig.cmake  IBIUse.cmake
Shaders/: Phong.cg
other/ibi_factory/: Factory.h
other/ibi_texturemanager/: TextureLoader.h  TextureManager.cpp  TextureManager.h
other/plugins/: CMakeLists.txt  texture_loader_empty.cpp  texture_loader_nrrd.cpp  texture_loader_nrrd3D.cpp  texture_loader_qt.cpp  texture_loader_transfer_func.cpp
src/: CMakeLists.txt
src/ibi/: CMakeLists.txt  ibi.h  ibi_internal.h
src/ibi/ibi_cmdline/: CommandLineParser.cpp  CommandLineParser.h
src/ibi/ibi_common/: common.h
src/ibi/ibi_error/: Exception.cpp  Exception.h
src/ibi/ibi_framebuffer/: Framebuffer.cpp  Framebuffer.h
src/ibi/ibi_geometry/: AxisAlignedBox.cpp  AxisAlignedBox.h  Intersection.cpp  Intersection.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Ray.h  Transform.cpp  Transform.h  Triangle.cpp  Triangle.h  Vector3.cpp  Vector3.h
src/ibi/ibi_gl/: FramebufferObject.cpp  FramebufferObject.h  GL.cpp  GL.h  GLMode2D.cpp  GLMode2D.h  GLRenderSystem.cpp  GLRenderSystem.h  GeometryDrawer.cpp  GeometryDrawer.h  GeometryDrawer2D.cpp  GeometryDrawer2D.h  Texture.cpp  Texture.h  TextureLoader.h  TextureLoadingInfo.cpp  TextureLoadingInfo.h  ibi_gl.h
src/ibi/ibi_gpuprogrammanager/: FragmentProgram.cpp  FragmentProgram.h  GPUProgram.cpp  GPUProgram.h  GPUProgramManager.cpp  GPUProgramManager.h  VertexProgram.cpp  VertexProgram.h
src/ibi/ibi_interpolation/: Interpolation.cpp  Interpolation.h
src/ibi/ibi_math/: Math.cpp  Math.h
src/ibi/ibi_qt/: TextureConfigurator_Qt.h  TextureLoader.cpp  TextureLoader.h  ibiQFunctorGLViewer.cpp  ibiQFunctorGLViewer.h  ibiQGLViewer.cpp  ibiQGLViewer.h  ibiQRaycastingViewer.cpp  ibiQRaycastingViewer.h
src/ibi/ibi_render_system/: RenderSystem.cpp  RenderSystem.h
src/ibi/ibi_scene_graph/: Renderable.cpp  Renderable.h  SceneGraph.cpp  SceneGraph.h  SceneNode.cpp  SceneNode.h
src/ibi/ibi_test_utils/: TestScene.h
src/ibi/ibi_texturemanager/: TextureLoader.h  TextureManager.cpp  TextureManager.h
src/ibi_cmdline/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h
src/ibi_common/: common.h
src/ibi_error/: CMakeLists.txt  Exception.cpp  Exception.h
src/ibi_geometry/: AxisAlignedBox.cpp  AxisAlignedBox.h  Intersection.cpp  Intersection.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Ray.h  Transform.cpp  Transform.h  Triangle.cpp  Triangle.h  Vector3.cpp  Vector3.h
src/ibi_gl/: CMakeLists.txt  GL.cpp  GL.h  GeometryDrawer.cpp  GeometryDrawer.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h
src/ibi_gl2d/: CMakeLists.txt  GLMode2D.cpp  GLMode2D.h  Sprite.cpp  Sprite.h
src/ibi_interpolation/: Interpolation.cpp  Interpolation.h
src/ibi_math/: Math.cpp  Math.h
src/ibi_qt/: CMakeLists.txt  ImageWidget.cpp  ImageWidget.h  TextureLoader.cpp  TextureLoader.h  ibiQtFunctorGLWidget.cpp  ibiQtFunctorGLWidget.h  ibiQtGLWidget.cpp  ibiQtGLWidget.h  ibiQtSmartGLWidget.cpp  ibiQtSmartGLWidget.h
src/plugins/: nrrdGLutils.h  texture_loader_empty.cpp  texture_loader_nrrd.cpp  texture_loader_nrrd3D.cpp  texture_loader_qt.cpp  texture_loader_transfer_func.cpp
